# openzeppelin-relayer

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rusty-hook.toml  .talismanrc  .yamlfix.toml  Brewfile.netlify  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_README.md  Dockerfile.development  Dockerfile.production  Makefile.toml  README.md  SECURITY.md  _typos.toml  config.json  docker-compose.yaml  netlify.toml  osv-scanner.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.githooks/: commit-msg.sh  pre-push
.github/: README.md  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml
.github/actions/prepare/: action.yml
.github/release-please/: .config.json
.github/workflows/: ci.yaml  cla.yml  codeql.yml  pr-title.yaml  rc.yml  release-docker.yml  release-docs.yml  release-please.yml  release-sbom.yml  rust-docs-url.yml  scorecard.yml  semgrep.yml  update-lock.yaml
cmd/prometheus/: grafana.ini  prometheus.yml
cmd/prometheus/dashboards/: dashboard.yml  relayer_app_metrics_dashboard.json
cmd/prometheus/datasources/: prometheus.yml
config/: config.example.json
config/networks/: abstract.json  arbitrum.json  bsc.json  ethereum.json  linea.json  mantle.json  optimism.json  other-l1s.json  polygon.json  scroll.json  solana.json  sophon.json  stellar.json  zksync.json
docs/: README.md  antora-playbook.yml  antora.yml  openapi.json  package-lock.json  package.json
docs/modules/ROOT/: nav.adoc  quickstart.adoc
docs/supplemental-ui/partials/: header-content.hbs
examples/basic-example/: .env.example  README.md  config.json  docker-compose.yaml
examples/basic-example-logging/: .env.example  README.md  docker-compose.yaml
examples/basic-example-logging/config/: config.json
examples/basic-example-metrics/: .env.example  README.md  docker-compose.yaml
examples/basic-example-metrics/config/: config.json
examples/basic-example-plugin/: README.md  docker-compose.yaml
examples/basic-example-plugin/config/: config.json
examples/basic-example-plugin/test-plugin/: index.ts  package.json  pnpm-lock.yaml
examples/basic-example/config/: config.json
examples/basic-example/keys/: local-signer.json
examples/evm-aws-kms-signer/: .env.example  README.md  docker-compose.yaml
examples/evm-aws-kms-signer/config/: config.json
examples/evm-gcp-kms-signer/: .env.example  README.md  docker-compose.yaml
examples/evm-gcp-kms-signer/config/: config.json
examples/evm-turnkey-signer/: README.md  docker-compose.yaml
examples/evm-turnkey-signer/config/: config.json
examples/launchtube-plugin-example/: README.md  docker-compose.yaml
examples/launchtube-plugin-example/config/: config.json
examples/launchtube-plugin-example/launchtube/: config.json  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/network-configuration-config-file/: .env.example  README.md  docker-compose.yaml
examples/network-configuration-config-file/config/: config.json
examples/network-configuration-json-file/: README.md
examples/network-configuration-json-file/config/: config.json
examples/redis-storage/: .env.example  README.md  docker-compose.yaml
examples/redis-storage/config/: config.json
examples/solana-google-cloud-kms-signer/: .env.example  README.md  docker-compose.yaml
examples/solana-google-cloud-kms-signer/config/: config.json
examples/solana-turnkey-signer/: .env.example  README.md  docker-compose.yaml
examples/solana-turnkey-signer/config/: config.json
examples/vault-secret-signer/: .env.example  README.md  docker-compose.yaml
examples/vault-secret-signer/config/: config.json
examples/vault-transit-signer/: README.md  docker-compose.yaml
examples/vault-transit-signer/config/: config.json
helpers/: create_key.rs  generate_encyption_key.rs  generate_openapi.rs  generate_uuid.rs  test_tx.rs
plugins/: README.md  example.ts  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
plugins/examples/: example-deprecated.ts  example.ts
plugins/lib/: executor.ts  logger.ts  plugin.ts
plugins/tests/: setup.ts
plugins/tests/lib/: logger.test.ts  plugin.test.ts
scripts/: commit-msg.sh  docker_compose.sh  rust_antora.sh
src/: config_processor.rs  errors.rs  lib.rs  main.rs  openapi.rs
src/api/: mod.rs
src/api/controllers/: cat.rs  (+5 more)
src/bootstrap/: config_processor.rs  initialize_app_state.rs  initialize_relayers.rs  initialize_workers.rs
src/config/: config_file.rs  error.rs  mod.rs  rate_limit.rs  server_config.rs
src/constants/: authorization.rs  evm_transaction.rs  mod.rs  oracles.rs  plugins.rs  public_endpoints.rs  relayer.rs  retry.rs  stellar_transaction.rs  token.rs  transaction.rs  transactions.rs  validation.rs  worker.rs
src/controllers/: cat_controller.rs  mod.rs
src/domain/: mod.rs
src/init/: config_processor.rs  initialize_app_state.rs  initialize_relayers.rs  initialize_workers.rs  mod.rs
src/jobs/: job.rs  job_producer.rs  mod.rs  queue.rs  retry_backoff.rs  workers.rs
src/logging/: mod.rs
src/metrics/: README.md  middleware.rs  mod.rs
src/models/: address.rs  api_response.rs  app_state.rs  cat_models.rs  mod.rs  pagination.rs  plain_or_env_value.rs  plugin.rs  secret_string.rs  types.rs
src/repositories/: mod.rs  network.rs  notification.rs  plugin.rs  redis_base.rs  relayer.rs  signer.rs  transaction.rs  transaction_counter.rs
src/routes/: cat_routes.rs  mod.rs
src/services/: cat_service.rs  mod.rs
src/utils/: address_derivation.rs  auth.rs  base64.rs  der.rs  encryption.rs  key.rs  mocks.rs  mod.rs  redis.rs  rpc_selector.rs  secp256k.rs  service_info_log.rs  time.rs  transaction.rs  uuid.rs
tests/: integration.rs  integrations.rs  mod.rs  properties.rs
tests/integration/: logging.rs  main.rs  metrics.rs
tests/properties/: logging.rs
(+241 files in other folders)
