[package]
name = "openzeppelin-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
log = "0.4"
simple_logger = "5.0.0"
dotenvy = "0.15"
thiserror = "2"
async-trait = "0.1"
actix-rt = "2.0.0"
alloy = { version = "0.9", features = ["full"] }
serde_json = "1"
strum = { version = "0.26", default-features = false, features = ["derive"] }
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive", "alloc"] }
num_enum = { version = "0.7", default-features = false }
once_cell = "1.17"
regex = "1"
futures = "0.3"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
eyre = "0.6"
color-eyre = "0.6"
apalis = { version = "0.6.4", features = ["limit", "retry", "catch-panic", "timeout"] }
apalis-redis = { version = "0.6.4" }
tokio = { version = "1.43", features = ["sync", "io-util"] }
redis = { version = "0.28" }
rand = "0.9"
parking_lot = "0.12"
tower = "0.5"
actix-governor = "0.8"
governor = "0.8.0"

