[package]
name = "openzeppelin-relayer"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"         #MSRV

[profile.release]
opt-level = 0
overflow-checks = false
panic = 'unwind'

[profile.test]
debug = true
opt-level = 0
overflow-checks = true
panic = 'abort'

[dependencies]
actix-web = "4"
log = "0.4"
simple_logger = "5.0.0"
dotenvy = "0.15"
thiserror = "2"
async-trait = "0.1"
actix-rt = "2.0.0"
alloy = { version = "0.9", features = ["full"] }
serde_json = "1"
strum = { version = "0.26", default-features = false, features = ["derive"] }
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive", "alloc"] }
num_enum = { version = "0.7", default-features = false }
once_cell = "1.17"
regex = "1"
futures = "0.3"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
eyre = "0.6"
color-eyre = "0.6"
apalis = { version = "0.6.4", features = ["limit", "retry", "catch-panic", "timeout"] }
apalis-redis = { version = "0.6.4" }
tokio = { version = "1.43", features = ["sync", "io-util"] }
redis = { version = "0.28" }
rand = "0.9"
parking_lot = "0.12"
tower = "0.5"
oz-keystore = { version = "0.1"}
hex = { version = "0.4"}
bytes = { version = "1.9" }
reqwest = { version = "0.12", features = ["json"] }
base64 = { version =  "0.22" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
dashmap = { version = "6.1" }
actix-governor = "0.8"
governor = "0.8.0"

[dev-dependencies]
cargo-llvm-cov = "0.6"
mockall = "0.13.1"
mockito = "1.6.1"
proptest = "1.6.0"
rand = "0.9.0"
tempfile = "3.2"

[[bin]]
path = "src/main.rs"
name = "openzeppelin-relayer"
