[package]
name = "openzeppelin-relayer"
version = "1.0.0"
edition = "2021"
rust-version = "1.86"         #MSRV

[profile.release]
opt-level = 0
overflow-checks = false
panic = "unwind"

[profile.test]
debug = true
opt-level = 0
overflow-checks = true
panic = "unwind"

[dependencies]
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.75.0"
actix-web = "4"
log = "0.4"
simplelog = "0.12"
prometheus = "0.14"
lazy_static = "1.5"
dotenvy = "0.15"
thiserror = "2"
async-trait = "0.1"
actix-rt = "2.0.0"
alloy = { version = "0.9", features = ["full"] }
serde_json = "1"
json-patch = "4.0"
strum = { version = "0.27", default-features = false, features = ["derive"] }
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive", "alloc"] }
num_enum = { version = "0.7", default-features = false }
once_cell = "1.17"
regex = "1"
futures = "0.3"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
eyre = "0.6"
color-eyre = "0.6"
apalis = { version = "0.7", features = ["limit", "retry", "catch-panic", "timeout"] }
apalis-redis = { version = "0.7" }
apalis-cron = { version = "0.7" }
redis = { version = "0.32", features = ["aio", "connection-manager", "tokio-comp"] }
tokio = { version = "1.43", features = ["sync", "io-util", "time"] }
rand = "0.9"
parking_lot = "0.12"
tower = "0.5"
oz-keystore = { version = "0.1.4"}
hex = { version = "0.4"}
bytes = { version = "1.9" }
reqwest = { version = "0.12", features = ["json"] }
base64 = { version =  "0.22" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
dashmap = { version = "6.1" }
actix-governor = "0.8"
solana-sdk = { version = "2.2" }
solana-client = { version = "2.2" }
spl-token = { version = "8" }
spl-token-2022 = { version = "8" }
mpl-token-metadata = { version = "5.1" }
sysinfo = "0.36"
bincode = { version = "1.3" }
bs58 = "0.5"
spl-associated-token-account = "6.0.0"
itertools = "0.14.0"
validator = { version = "0.20", features = ["derive"] }
vaultrs = { version = "0.7.4" }
utoipa = { version = "5.3", features = ["actix_extras"] }
secrets = { version = "1.2"}
libsodium-sys = "0.2.7"
zeroize = "1.8"
subtle = "2.6"
aes-gcm = "0.10"
ed25519-dalek = "2.2"
stellar-strkey = "0.0.13"
soroban-rs = "0.2.5"
p256 = { version = "0.13.2" }
google-cloud-auth = "0.22.1"
http = { version = "1.3.1" }
pem = { version = "3" }
simple_asn1 = { version = "0.6" }
k256 = { version = "0.13", features = ["ecdsa-core"]}
solana-system-interface = { version = "1.0.0", features = ["bincode"] }

[dev-dependencies]
cargo-llvm-cov = "0.6"
mockall = { version = "0.13" }
mockito = "1.6.1"
proptest = "1.6.0"
rand = "0.9.0"
tempfile = "3.2"
serial_test = "3.2"
clap = { version = "4.4", features = ["derive"] }
wiremock = "0.6"

[[bin]]
name = "openzeppelin-relayer"
path = "src/main.rs"
doc = true
doctest = true

[[example]]
name = "test_tx"
path = "helpers/test_tx.rs"

[[example]]
name = "create_key"
path = "helpers/create_key.rs"

[[example]]
name = "generate_uuid"
path = "helpers/generate_uuid.rs"

[[example]]
name = "generate_encryption_key"
path = "helpers/generate_encyption_key.rs"

[[example]]
name = "generate_openapi"
path = "helpers/generate_openapi.rs"

[lib]
path = "src/lib.rs"
